--- a/.github/workflows/auto-build.yml
+++ b/.github/workflows/auto-build.yml
@@ -41,14 +41,14 @@ jobs:
           LAST_ECOMM=$(jq -r '.ecommerce_integrations' version.json)
 
           if [[ "$FRAPPE_VERSION" != "$LAST_FRAPPE" || "$ERPNEXT_VERSION" != "$LAST_ERPNEXT" || "$ECOMM_VERSION" != "$LAST_ECOMM" ]]; then
-            echo "should_build=true" >> $GITHUB_OUTPUT
+            echo "should_build=true" >> $"GITHUB_OUTPUT"
           else
-            echo "should_build=false" >> $GITHUB_OUTPUT
+            echo "should_build=false" >> $"GITHUB_OUTPUT"
           fi
 
-          echo "frappe=$FRAPPE_VERSION" >> $GITHUB_OUTPUT
-          echo "erpnext=$ERPNEXT_VERSION" >> $GITHUB_OUTPUT
-          echo "ecomm=$ECOMM_VERSION" >> $GITHUB_OUTPUT
+          echo "frappe=$FRAPPE_VERSION" >> $"GITHUB_OUTPUT"
+          echo "erpnext=$ERPNEXT_VERSION" >> $"GITHUB_OUTPUT"
+          echo "ecomm=$ECOMM_VERSION" >> $"GITHUB_OUTPUT"
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
