--- a/.github/workflows/auto-build.yml
+++ b/.github/workflows/auto-build.yml
@@ -27,9 +27,9 @@ jobs:
           git clone --depth=1 --branch version-15 https://github.com/frappe/erpnext.git /tmp/erpnext
           git clone --depth=1 --branch main https://github.com/frappe/ecommerce_integrations.git /tmp/ecomm
 
-          FRAPPE_VERSION=$(grep "__version__" /tmp/frappe/frappe/__init__.py | sed -E 's/__version__ = "(.*)"/\1/')
-          ERPNEXT_VERSION=$(grep "__version__" /tmp/erpnext/erpnext/__init__.py | sed -E 's/__version__ = "(.*)"/\1/')
-          ECOMM_VERSION=$(grep "__version__" /tmp/ecomm/ecommerce_integrations/__init__.py | sed -E 's/__version__ = "(.*)"/\1/')
+          FRAPPE_VERSION=$(grep "__version__" /tmp/frappe/frappe/__init__.py | cut -d'"' -f2)
+          ERPNEXT_VERSION=$(grep "__version__" /tmp/erpnext/erpnext/__init__.py | sed -E cut -d'"' -f2)
+          ECOMM_VERSION=$(grep "__version__" /tmp/ecomm/ecommerce_integrations/__init__.py | cut -d'"' -f2)
 
           echo "Detected Versions:"
           echo "  frappe: $FRAPPE_VERSION"
@@ -41,13 +41,13 @@ jobs:
           LAST_ECOMM=$(jq -r '.ecommerce_integrations' version.json)
 
           if [[ "$FRAPPE_VERSION" != "$LAST_FRAPPE" || "$ERPNEXT_VERSION" != "$LAST_ERPNEXT" || "$ECOMM_VERSION" != "$LAST_ECOMM" ]]; then
-            echo "should_build=true" >> $"GITHUB_OUTPUT"
+            echo "should_build=true" >> $GITHUB_OUTPUT
           else
-            echo "should_build=false" >> $"GITHUB_OUTPUT"
+            echo "should_build=false" >> $GITHUB_OUTPUT
           fi
 
-          echo "frappe=$FRAPPE_VERSION" >> $"GITHUB_OUTPUT"
-          echo "erpnext=$ERPNEXT_VERSION" >> $"GITHUB_OUTPUT"
+          echo "frappe=$FRAPPE_VERSION" >> $GITHUB_OUTPUT
+          echo "erpnext=$ERPNEXT_VERSION" >> $GITHUB_OUTPUT
           echo "ecomm=$ECOMM_VERSION" >> $"GITHUB_OUTPUT"
 
       - name: Log in to Docker Hub
